카카오페이 제거 및 누락된 복사 추가

--- a/index.html
+++ b/index.html
@@ -2995,21 +2995,14 @@
 									<div class="flex-auto w-[25%] font-semibold false">신랑</div>
 									<div class="flex-auto w-[55%] font-semibold">김휘진</div>
 									<div class="flex-auto w-[20%]"><button type="button"
-											class="h-[25px] w-full bg-[#818181] text-white text-[0.7rem] py-[0.2rem] rounded-[5px] hover:opacity-50">복사하기</button>
+											class="h-[25px] w-full bg-[#818181] text-white text-[0.7rem] py-[0.2rem] rounded-[5px] hover:opacity-50"
+											onclick="copy('123456789')">복사하기</button>
 									</div>
 								</div>
 								<div class="flex">
 									<div class="flex-auto w-[25%]">우체국</div>
 									<div class="flex-auto w-[55%]">123456789</div>
-									<div class="flex-auto w-[20%]"><button
-											class="h-[25px] w-full hover:opacity-50 bg-[#fee12f] rounded-[5px] flex items-center justify-center">
-											<img
-												alt="pay"
-												srcset="./static/image/kkapay.webp"
-												src="./static/image/kkapay.webp"
-												width="2000" height="616" decoding="async" data-nimg="1"
-												class="p-[0.5rem] max-w-[50px]" loading="lazy"
-												style="color: transparent;"></button></div>
+									<div class="flex-auto w-[20%]"></div>
 								</div>
 							</div>
 							<div class="mb-4 text-[13px]">
@@ -3017,7 +3010,8 @@
 									<div class="flex-auto w-[25%] font-semibold false">신랑 어버님</div>
 									<div class="flex-auto w-[55%] font-semibold">김광수</div>
 									<div class="flex-auto w-[20%]"><button type="button"
-											class="h-[25px] w-full bg-[#818181] text-white text-[0.7rem] py-[0.2rem] rounded-[5px] hover:opacity-50">복사하기</button>
+											class="h-[25px] w-full bg-[#818181] text-white text-[0.7rem] py-[0.2rem] rounded-[5px] hover:opacity-50"
+											onclick="copy('123456789')">복사하기</button>
 									</div>
 								</div>
 								<div class="flex">
@@ -3071,15 +3065,7 @@
 								<div class="flex">
 									<div class="flex-auto w-[25%]">우리은행</div>
 									<div class="flex-auto w-[55%]">123456789</div>
-									<div class="flex-auto w-[20%]"><button
-											class="h-[25px] w-full hover:opacity-50 bg-[#fee12f] rounded-[5px] flex items-center justify-center">
-											<img
-												alt="pay"
-												srcset="./static/image/kkapay.webp"
-												src="./static/image/kkapay.webp"
-												width="2000" height="616" decoding="async" data-nimg="1"
-												class="p-[0.5rem] max-w-[50px]" loading="lazy"
-												style="color: transparent;"></button></div>
+									<div class="flex-auto w-[20%]"></div>
 								</div>
 							</div>
 							<div class="mb-4 text-[13px]">
