gallery detail 반응형 적용

--- a/index.html
+++ b/index.html
@@ -2749,8 +2749,7 @@
 								<div data-index="1" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/01.jpg">
 										</div>
@@ -2759,8 +2758,7 @@
 								<div data-index="2" class="slick-slide slick-active slick-current" tabindex="-1"
 									aria-hidden="false" style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/02.jpg">
 										</div>
@@ -2769,8 +2767,7 @@
 								<div data-index="3" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/03.jpg">
 										</div>
@@ -2779,8 +2776,7 @@
 								<div data-index="4" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/04.jpg">
 										</div>
@@ -2789,8 +2785,7 @@
 								<div data-index="5" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/05.jpg">
 										</div>
@@ -2799,8 +2794,7 @@
 								<div data-index="6" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/06.jpg">
 										</div>
@@ -2809,8 +2803,7 @@
 								<div data-index="7" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/07.jpg">
 										</div>
@@ -2819,8 +2812,7 @@
 								<div data-index="8" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/08.jpg">
 										</div>
@@ -2829,8 +2821,7 @@
 								<div data-index="9" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/09.jpg">
 										</div>
@@ -2839,8 +2830,7 @@
 								<div data-index="10" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/10.jpg">
 										</div>
@@ -2849,8 +2839,7 @@
 								<div data-index="11" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/11.jpg">
 										</div>
@@ -2859,8 +2848,7 @@
 								<div data-index="12" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/12.jpg">
 										</div>
@@ -2869,8 +2857,7 @@
 								<div data-index="13" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/13.jpg">
 										</div>
@@ -2879,8 +2866,7 @@
 								<div data-index="14" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/14.jpg">
 										</div>
@@ -2889,8 +2875,7 @@
 								<div data-index="15" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/15.jpg">
 										</div>
@@ -2899,8 +2884,7 @@
 								<div data-index="16" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/16.jpg">
 										</div>
@@ -2909,8 +2893,7 @@
 								<div data-index="17" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/17.jpg">
 										</div>
@@ -2919,8 +2902,7 @@
 								<div data-index="18" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/18.jpg">
 										</div>
@@ -2929,8 +2911,7 @@
 								<div data-index="19" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/19.jpg">
 										</div>
@@ -2939,8 +2920,7 @@
 								<div data-index="20" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/20.jpg">
 										</div>
@@ -2949,8 +2929,7 @@
 								<div data-index="21" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/21.jpg">
 										</div>
@@ -2959,8 +2938,7 @@
 								<div data-index="22" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/22.jpg">
 										</div>
@@ -2969,8 +2947,7 @@
 								<div data-index="23" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/23.jpg">
 										</div>
@@ -2979,8 +2956,7 @@
 								<div data-index="24" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/24.jpg">
 										</div>
@@ -2989,8 +2965,7 @@
 								<div data-index="25" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/25.jpg">
 										</div>
@@ -2999,8 +2974,7 @@
 								<div data-index="26" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/26.jpg">
 										</div>
@@ -3009,8 +2983,7 @@
 								<div data-index="27" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/27.jpg">
 										</div>
@@ -3019,8 +2992,7 @@
 								<div data-index="28" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/28.jpg">
 										</div>
@@ -3029,8 +3001,7 @@
 								<div data-index="29" class="slick-slide" tabindex="-1" aria-hidden="true"
 									style="outline: none; width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/29.jpg">
 										</div>
@@ -3039,8 +3010,7 @@
 								<div data-index="30" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true"
 									style="width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/30.jpg">
 										</div>
@@ -3049,8 +3019,7 @@
 								<div data-index="31" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true"
 									style="width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/31.jpg">
 										</div>
@@ -3059,8 +3028,7 @@
 								<div data-index="32" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true"
 									style="width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/32.jpg">
 										</div>
@@ -3069,8 +3037,7 @@
 								<div data-index="33" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true"
 									style="width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/33.jpg">
 										</div>
@@ -3079,8 +3046,7 @@
 								<div data-index="34" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true"
 									style="width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/34.jpg">
 										</div>
@@ -3089,8 +3055,7 @@
 								<div data-index="35" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true"
 									style="width: 800px;">
 									<div>
-										<div class="select-none" tabindex="-1"
-											style="width: 800px; display: inline-block;"><img
+										<div class="select-none" tabindex="-1"><img
 												class="cursor-pointer mx-auto gallery_img select-none" alt="gallery_img"
 												src="./static/image/gallery/35.jpg">
 										</div>
@@ -3245,6 +3210,9 @@
 
 </body>
 <script>
+	console.log(screen.maxWidth);
+	console.log(screen.width);
+
 	const playMusic = () => {
 		const audio = document.querySelector('audio');
 		audio.play();
@@ -3294,16 +3262,16 @@
 	}
 
 	const changeGalleryDetailPage = (pageNo) => {
-		const xPos = 0 + 800 * (pageNo - 1);
-		document.querySelector(".gallery-detail").setAttribute("style", `width: 28000px; opacity: 1; transform: translate3d(-${xPos}px, 0px, 0px); transition: -webkit-transform 500ms ease 0s;`);
+		const xPos = 0 + screen.width * (pageNo - 1);
+		document.querySelector(".gallery-detail").setAttribute("style", `width: ${35*screen.width}px; opacity: 1; transform: translate3d(-${xPos}px, 0px, 0px); transition: -webkit-transform 500ms ease 0s;`);
 	}
 
 	const prevDetail = () => {
 		const styleString = document.querySelector(".gallery-detail").getAttribute("style");
 		const nowXPos = Number(styleString.split("translate3d(-")[1].split("px")[0]);
-		const nextXPos =  nowXPos - 800;
+		const nextXPos =  nowXPos - screen.width;
 		if(nextXPos>=0){
-			changeGalleryDetailPage(nextXPos/800 + 1);
+			changeGalleryDetailPage(nextXPos/screen.width + 1);
 		}
 	}
 
@@ -3311,9 +3279,12 @@
 		const styleString = document.querySelector(".gallery-detail").getAttribute("style");
 		const maxWidth = Number(styleString.split("px;")[0].split("width: ")[1]);
 		const nowXPos = Number(styleString.split("translate3d(-")[1].split("px")[0]);
-		const nextXPos =  nowXPos + 800;
+		const nextXPos =  nowXPos + screen.width;
+
+		console.log(maxWidth);
+
 		if(nextXPos<maxWidth){
-			changeGalleryDetailPage(nextXPos/800 + 1);
+			changeGalleryDetailPage(nextXPos/screen.width + 1);
 		}
 	}
 
@@ -3325,15 +3296,21 @@
 	document.querySelector("#leftDay").innerText = ` ${leftDay}일 `;
 
 	document.querySelectorAll(".gallery-item").forEach(
-    item => {
-        const splitPath = item.querySelector("img").src.split("/");
-        const pageNo = Number(splitPath[splitPath.length-1].split(".")[0]);
-        
-        item.addEventListener('click', () => {
-            openImageView(pageNo);
-        });
-    }
-)
+		item => {
+			const splitPath = item.querySelector("img").src.split("/");
+			const pageNo = Number(splitPath[splitPath.length-1].split(".")[0]);
+			
+			item.addEventListener('click', () => {
+				openImageView(pageNo);
+			});
+		}
+	)
+
+	document.querySelectorAll(".select-none").forEach(
+		item => {
+			item.setAttribute("style", `width: ${screen.width}px; display: inline-block;`);
+		}
+	)
 </script>
 
 </html>
