--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="롤링 인 페이퍼 청첩장">
+	<meta property="og:site_name" content="휘진♥현정 청첩장">
 	<meta name="theme-color" content="#FFFFFF">
 	<link rel="icon" href="./static/image/favicon.ico">
 	<link rel="manifest" href="/manifest.json">
@@ -12,12 +12,11 @@
 	<meta name="description" content="2025년 2월 22일 토요일 12시 ">
 	<meta property="og:title" content="휘진, 현정 결혼합니다. ">
 	<meta property="og:description" content="2025년 2월 22일 토요일 12시 ">
-	<meta property="og:url" content="https://rollinginpapercard.com/book/SqhBY">
-	<meta property="og:image"
-		content="https://s3.rollinginpapercard.com/marryBook/0d9234df-51f1-41a5-bb24-fd329cbfa1bd.blob">
-	<meta property="og:image:alt" content="rollinginpapercard">
+	<meta property="og:url" content="https://victoriajoo.github.io">
+	<meta property="og:image" content="https://victoriajoo.github.io/static/image/gallery/main.jpg">
+	<meta property="og:image:alt" content="청첩장">
 	<meta property="og:image:type" content="image/jpeg">
-	<link rel="canonical" href="https://rollinginpapercard.com/book/SqhBY">
+	<link rel="canonical" href="https://victoriajoo.github.io">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="next-head-count" content="17">
 	<link rel="preconnect" href="/" crossorigin="anonymous">
