우클릭 및 드래그 금지

--- a/index.html
+++ b/index.html
@@ -1526,7 +1526,7 @@
 	<script type="text/javascript" charset="utf8" async="" src="https://www.youtube.com/iframe_api"></script>
 </head>
 
-<body style="touch-action: pan-y; background: rgb(53, 54, 58);" class="prevent_img">
+<body oncontextmenu = "return false" ondragstart = "return false" style="touch-action: pan-y; background: rgb(53, 54, 58);" class="prevent_img">
 	<div id="__next">
 		<script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script>
 		<script type="text/javascript"
